Handle poll interval and API token better
- Token expires every hour, so a new token needs to be fetched every
  time, rather than just being able to get one at object
  initialization.

- The "stalledDiscussionPollTimeMins" property set in the
  bf2-arch-bot.yml seemingly can't be used in the @Scheduled
  annotation, since it's not available early enough.

--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ bot.enable.pr-review=false
 bot.enable.state-machine=false
 bot.enable.create-draft=true
 
+BOT_STALLED_DISCUSSION_FLOW_POLL_DURATION=86400s
 
 ## Stuff required by the github app framework
 
