--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 quarkus.log.level=DEBUG
+bot.enable.stalled-discussion=true
+bot.enable.create-draft=true
+BOT_STALLED_DISCUSSION_FLOW_POLL_DURATION=86400s
